Fix to center align home icons

--- a/soph/site-specific.css
+++ b/soph/site-specific.css
@@ -301,6 +301,7 @@ body.hd #content {
 
 .hp-icons-item {
     padding: 20px;
+    text-align:center;
 }
 
 .hp-icons-item>a img {
